--- a/index.html
+++ b/index.html
@@ -9,17 +9,30 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="css/style.css">
-    <title>Crónometro</title>
+    <title>Temporizador</title>
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-lg  navbarEstilo">
             <div class="container-fluid">
-                <span class="navbar-brand mb-0 h1 text-primary">Temporizador</span>
+                <span class="navbar-brand  text-primary">Temporizador</span>
             </div>
         </nav>
     </header>
-    <main></main>
+    <main>
+        <section class="container timer-container ">
+            <div id="timer" class="bg-light p-3 rounded">00:00:00</div>
+            <div class="buttons">
+                <button class="btn btn-primary" onclick="startTimer()">Iniciar</button>
+                <button class="btn btn-warning" onclick="pauseTimer()">Pausar</button>
+                <button class="btn btn-danger" onclick="resetTimer()">Reset</button>
+            </div>
+            <div class="input-container">
+                <label class="mb-2" for="inputTime">Tiempo (segundos):</label>
+                <input type="number" id="inputTime" class="form-control" placeholder="Ingrese el tiempo">
+            </div>
+        </section>
+    </main>
     <footer class="text-primary py-3 text-center footerEstilo">
         <p> &copy; Todos los derechos reservados</p>
     </footer>
